--- a/frontend/web/css/main.less
+++ b/frontend/web/css/main.less
@@ -54,6 +54,10 @@ p {
         background: url("../images/like.png") no-repeat 4px -24px;
         color: #395996;
     }
+    .like-active{
+        background: url(../images/like.png) no-repeat 4px -24px;
+        color: #395996;
+    }
 }
 
 .wp-post-image {
@@ -107,7 +111,7 @@ p {
 .widget ul li {
     list-style: none;
     padding: 8px 8px 8px 23px;
-    background: url("../images/li-arrow.png") no-repeat 8px 15px;
+    // background: url("../images/li-arrow.png") no-repeat 8px 15px;
     border-bottom: 1px solid #f2f2f2;
 }
 
@@ -194,13 +198,13 @@ ul.articles {
 ul.articles .article-entry {
     position: relative;
     border-bottom: 1px solid #f2f2f2;
-    padding: 0 0 0 24px;
+    // padding: 0 0 0 24px;
     margin-top: 10px;
-    background: url("../images/standard.png") no-repeat 0 3px;
+    // background: url("../images/standard.png") no-repeat 0 3px;
 }
 
 ul.articles .article-entry.standard {
-    background: url("../images/standard.png") no-repeat 0 3px;
+    // background: url("../images/standard.png") no-repeat 0 3px;
 }
 
 ul.articles .article-entry.video {
@@ -542,4 +546,9 @@ ul.articles li.article-entry:last-child {
     padding-bottom: 5px;
     border-bottom: 1px solid #eee;
  }
- 
+ .articles{
+    .like-active{
+        background: url(../images/like.png) no-repeat 4px -24px;
+        color: #395996;
+    }
+ }
